LPS-118840 Fix the field icons overlapping the fields in the left sidebar from the form builder

--- a/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/main.scss
@@ -64,6 +64,10 @@ body.open .app-builder-upper-toolbar {
 	margin-top: 9px;
 	max-width: 260px;
 	min-width: 260px;
+
+	.dropdown-item-indicator-start {
+		position: static;
+	}
 }
 
 .dropdown-fixed-height {
